working on last bit

--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -892,6 +892,21 @@ In P2, while the process of peer playtesting was encouraged it was not explicitl
 CAN THIS BE A MORE CONSISE VIA A LINK?
 
 
+#### Remixing, peer learning, and choice of starting template MERGE UP
+
+**Tension of a group remixing from one template rather than feeler community inspiration and interaction**
+
+To address issues of a practical nature to get starting coding, a restriction in game genre and was made in the form of a starting template, thus restricting personal choice, in a way which negatively impacted some families (see appendix 5.bee). In addition no online community was promoted to motivate inspiration from the work of others,  collaboration and peer review via comments [@monroy-hernandez_cooperation_nodate; @cress_supporting_2016]. However some positive aspects inherent to this design choice.
+
+- In practical terms, it simplified the process of supporting code errors,
+
+- it spurred community inspiration and interaction, peer support, sharing and problem solving due to the use of similar code bases.
+
+
+<!-- Sharing of ideas and inspiration did happen both on the playtesting (explored later and more extensively Chapter 7) of each others games and via incidental exposure to the online graphical creations of others via a shared account to Piskel. -->
+
+
+
 <!-- #### What kind of Maker are you - Motivations behind social processes (emerging in playtesting)
 
 
@@ -938,7 +953,7 @@ https://drive.google.com/drive/folders/1I8D_axlOUAFIGarrnzGV5mSCe2MDCDso -->
 
 
 | Your Alien Mission (social)          | Your Secret Alien Mission:              
-|----------------|----------------[@brase_knowledge_2024]|
+|----------------|----------------|
 | Find out the names of 3 games that are being made.  | Change the variables at the start of someone else’s game to make it play in a funny way.    |
 | Make a list of characters in two other games being made.   | Change of the images in someone else’s project to a totally different image and see if they notice.    |
 | Find out the favourite computer games of 4 people.   | Change the level design of the first level of someone else’s project to make it impossible but try to change as little as possible to do that.   |
@@ -951,57 +966,52 @@ The impact of social missions and playtesting are described in more detail in ch
 
 ## Chapter Discussion
 
+This chapter has explored the complexity of the interacting tools and documentation in relation to their authenticity and impact on participant experiences.
 
-#### Remixing, peer learning, and choice of starting template MOVE UP
-
-**Tension of a group remixing from one template rather than feeler community inspiration and interaction**
-
-To address issues of a practical nature to get starting coding, a restriction in game genre and was made in the form of a starting template, thus restricting personal choice, in a way which negatively impacted some families (see appendix 5.bee). In addition no online community was promoted to motivate inspiration from the work of others,  collaboration and peer review via comments [@monroy-hernandez_cooperation_nodate; @cress_supporting_2016]. However some positive aspects inherent to this design choice.
-
-- In practical terms, it simplified the process of supporting code errors,
-
-- it spurred community inspiration and interaction, peer support, sharing and problem solving due to the use of similar code bases.
-
-
-<!-- Sharing of ideas and inspiration did happen both on the playtesting (explored later and more extensively Chapter 7) of each others games and via incidental exposure to the online graphical creations of others via a shared account to Piskel. -->
+RQ2 addresses uses the term computational fluency, which as explored in chapter 2, is a better fit for the aims of this study than computational thinking, given the former's increased focus on agency and a more concrete, accessible approach.  
 
 
 
+#### As part of the intro summary of the key features of this design narrative using the argumentative grammar of 3GAT / DBR
 
-#### Expressing the key features of this design narrative using the argumentative grammar of 3GAT
+<!-- - Affordances outlined in this learning design  double stimulation, give a quick summary, different types of agency   -->
+WHAT IS THIS REALLY ADDING?
 
-In returning to the role of 3GAT concepts in outlining the argumentative grammar of this design, the following observations are of value.
+In returning to the role of 3GAT concepts in outlining the argumentative grammar of this design, the following section expresses some of the key features of the design narrative.
 
-<!-- NOTE - PENUEL and others exploration of argumentative grammar of interventions.  -->
 
 
 The adaptations of to these tools can be conceived of as increasing instrumental agency by removing the need to understand concepts or use tools which were beyond the skill level of the participants.
+IS THIS EXPRESSED ELSE WHERE?
+
+This can be expressed as revising toolsets to effective mediation practices by addressing emerging tensions, in an
+
+These strategies can be seen pedagogy built around a sets of design affordances that fitting a DBR approach,
+
+Affordances can be viewed through a 3GAT lens as secondary stimuli.
+
+The meditational strategies, which emerged were not familiar to me before the start of this research, but after some research, exist in relevant research -
+e.g.  UMC literature, and half baked games, and constructionst design
 
 
 
-- Affordances outlined in this learning design  double stimulation, give a quick summary, different types of agency  
-
-- UMC literature, and half baked games, emerged, concepts which were not well known before the start of this research. These pedagogies can be seen pedagogy built around a sets of design affordances that fitting a DBR approach,
-
+Also relational agency developed, supported by playtesting ans social coding processes.
 
 Other tensions were resolved with more fundamental shifts to the overall structure of the activity which can be said to align more closely with the concept of transformative (authorial agency)  agency.
 
 **Emergence of GDPs as a germ cell of activity**
 
-For this learning design, the concept and pedagogy of working with game design patterns emerged not only as an object of activity on a more granular scope than typical, but also as guiding germ cell concept which helps participant and facilitators. In the discussion below, GDPs are noted in their use in step-wise instruction processes, and are also the topic of Chapter 6.
+For this learning design, the concept and pedagogy of working with game design patterns emerged not only as an object of activity on a more granular scope than typical, but also as guiding germ cell concept which helps participant and facilitators. In the discussion below, GDPs are noted in their use in step-wise instruction processes, (and are also the topic of Chapter 6.)
 
+LINK
+
+This chapter has by focusing on first technical and then more social dimensions of the learning design, (re)surfaced the many barriers to achieving computational fluency via the text coding of a multi-media project. The next section begins by discussing how authentic tools and processes, while challenging for novices, can be addressed using existing of key design principles. It then provides a summary of the designs approach to try to address these tensions in relation to existing research, in particular UMC, half-baked games and  constructionist design principles.
 
 ### Summary of evolution of learning design tools and processes (specifically in relation to constructionist principles)
-
-This chapter has explored the complexity of the interacting tools and documentation in relation to their authenticity and impact on participant experiences. This design narrative outlines how the use of authentic tools and processes, while challenging for novices, can be addressed using existing of key design principles.
-
-RQ2 addresses uses the term computational fluency, which as explored in chapter 2, is a better fit for the aims of this study than computational thinking, given the former's increased focus on agency and a more concrete, accessible approach.   
 
 <!-- At some point in this process I realised that I wanted to encourage the growth of computational fluency.
 
 That was not clear, the use of computational thinking also jumped out from a sense of wanting to fit into the common frameworks of this area. But this approach had always seemed too abstract as a form of repertoire to me. More hands on specific repertoires to do with the logistics of more concrete tasks suited the high impact from minimal input approach, made particularly relevant given the difficulty of using a code environment. -->
-
-This chapter has by focusing on first technical and then more social dimensions of the learning design, (re)surfaced the many barriers to achieving computational fluency via the text coding of a multi-media project. The next section provides a summary of the designs approach to try to address these tensions in relation to existing research, in particular UMC, half-baked games and  constructionist design principles.
 
  <!-- in line with wider conceptions of PBL and UDL.
 
@@ -1013,7 +1023,28 @@ This chapter has by focusing on first technical and then more social dimensions 
 
 While computational fluency is a valid of the objectives of the game making activity goal, this chapter has (re)surfaced the many barriers to achieving this via the text coding of a multi-media project. -->
 
+#### The potentially awesome impact of lifting the lid on authentic technologies -
 
+One of the differences is in authenticity...
+
+Aligned with the general principles of PBL [@hung_engaged_2006], this design has strived for authenticity in varied forms. Authenticity in terms of activity object here is multiple in dimension, e.g in audience, in tool use and in creative processes. While the impact of the authentic dimensions of the tools and process described in this chapter 7 in depth, this section outlines some of the rationale of design descriptions in relation to existing research.
+
+
+Lifting the lid on hidden technologies and concepts in hands-on, exploratory processes can be empowering for participants. Ratto explores this via critical making [@ratto_critical_2011], a process which playfully surfaces Latour's [@weibel_making_2005; @latour_cautious_2008] concepts of shifting matters of fact to matters of concern by exposing taken for granted artefacts as objects that have been designed (for better or worse). Conversations between participants showing an inspirational or engaging impact on previously unknown technology. For examples, exchanges among participants that communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.    
+
+    Pearl: It just shows you what goes into these games.
+    Student Helper 3: Think about how much effort goes into.
+    Pearl: You just take things for granted don’t you?
+
+<!-- MOVE TO CH.7?
+Participants are able to leave the protective harbour by accessing more authentic documentation and moving beyond existing templates. The experience may be involve choppier waters but the tools and processes remain familiar. -->
+
+<!-- IT FEELS LIKE IT WOULD BE GOOD TO TRY TO SQUEEZE THIS BIT INTO CHAPTER 4 ?
+PERHAPS via some ADDITION TO A TABLE AT THE END OF CHATP#### Different black boxes for different goalsER 4 -->
+
+<!-- While these elements of ethos are aligned, the process of supporting novices to use an authentic, text-based language and authoring tools used by professional community required more specific adaptations (o) : creating simplified but extendable starting template; highlighting code variables as key design affordances; using a grid structure to visually facilitate level design; and simplifying the syntax and the structure of the game code. -->
+
+<!-- This is a long-running theme of constructionist research, with roots in Papert concept of Microworlds, typically embodied by the Mathland environment, where participants control a robotic turtle with lines of simplified LOGO code language.  Because the turtle speaks only LOGO, children are drawn to speak LOGO to progress. Thus, Scratch and Mircoworlds can be seen as digital playgrounds with affordances that encourage certain types of play. -->
 
 
 #### Comparing to Microworlds & constructionist design priniciples
@@ -1046,36 +1077,7 @@ Increased scaffolding of learner resources and tools can increase instrumental a
 
 
 
-
-
-#### The potentially awesome impact of lifting the lid on authentic technologies   
-
-One of the differences is in authenticity...
-
-Aligned with the general principles of PBL [@hung_engaged_2006], this design has strived for authenticity in varied forms. Authenticity in terms of activity object here is multiple in dimension, e.g in audience, in tool use and in creative processes. While the impact of the authentic dimentions of the tools and process described in this chapter 7 in depth, this section outlines some of the rationale of design descriptions in relation to existing research.
-
-
-Lifting the lid on hidden technologies and concepts in hands-on, exploratory processes can be empowering for participants. Ratto explores this via critical making [@ratto_critical_2011], a process which playfully surfaces Latour's [@weibel_making_2005; @latour_cautious_2008] concepts of shifting matters of fact to matters of concern by exposing taken for granted artefacts as objects that have been designed (for better or worse). Conversations between participants showing an inspirational or engaging impact on previously unknown technology. For examples, exchanges among participants that communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.    
-
-    Pearl: It just shows you what goes into these games.
-    Student Helper 3: Think about how much effort goes into.
-    Pearl: You just take things for granted don’t you?
-
-
-
-
-<!-- MOVE TO CH.7?
-Participants are able to leave the protective harbour by accessing more authentic documentation and moving beyond existing templates. The experience may be involve choppier waters but the tools and processes remain familiar. -->
-
-<!-- IT FEELS LIKE IT WOULD BE GOOD TO TRY TO SQUEEZE THIS BIT INTO CHAPTER 4 ?
-PERHAPS via some ADDITION TO A TABLE AT THE END OF CHATP#### Different black boxes for different goalsER 4 -->
-
-<!-- While these elements of ethos are aligned, the process of supporting novices to use an authentic, text-based language and authoring tools used by professional community required more specific adaptations (o) : creating simplified but extendable starting template; highlighting code variables as key design affordances; using a grid structure to visually facilitate level design; and simplifying the syntax and the structure of the game code. -->
-
-<!-- This is a long-running theme of constructionist research, with roots in Papert concept of Microworlds, typically embodied by the Mathland environment, where participants control a robotic turtle with lines of simplified LOGO code language.  Because the turtle speaks only LOGO, children are drawn to speak LOGO to progress. Thus, Scratch and Mircoworlds can be seen as digital playgrounds with affordances that encourage certain types of play. -->
-
-
-#### **Synthesis effect of UMC + collection of GDPS**
+#### Synthesis effect of UMC + collection of GDPS
 
 Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].  The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.
 
@@ -1109,10 +1111,6 @@ OPEN THE DOOR HERE - AND POINT TO THE NEXT CHAPTER RATHER THAN TACKLING IT ALL.
 
 <!-- NOTE - DROP - MAKE MORE DIRECT
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
-
-
-
-
 
 ### Link to next chapter
 
